gcc/testsuite/rust/rustc/ui/issues/issue-43196.rs
fn main() {
    |
}
// { dg-error "" "" { target *-*-* } .-1 }
|
// { dg-error "" "" { target *-*-* } .-1 }

